# dofbot_ros2

./: README.md
dofbot_config/: .setup_assistant  CMakeLists.txt
dofbot_config/config/: initial_positions.yaml  yahboom_dofbot.ros2_control.xacro
dofbot_config/launch/: move_group_v2.launch.py  moveit_rviz.launch.py  ros2.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
dofbot_moveit/: CMakeLists.txt
dofbot_moveit/config/: controller.yaml
dofbot_moveit/launch/: dofbot.launch.py  mtc_node.launch.py
dofbot_moveit/src/: mtc_node.cpp
dofbot_moveit/urdf/: dofbot.urdf.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dofbot_config/share/ament_index/resource_index/package_run_dependencies/: dofbot_config
install/dofbot_config/share/dofbot_config/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dofbot_config/share/dofbot_config/config/: joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  yahboom_dofbot.srdf  yahboom_dofbot.urdf.xacro
install/dofbot_config/share/dofbot_config/launch/: demo.launch.py  demo_2.launch.py  move_group.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
install/dofbot_moveit/share/dofbot_moveit/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dofbot_moveit/share/dofbot_moveit/cmake/: dofbot_moveitConfig.cmake
install/dofbot_moveit/share/dofbot_moveit/config/: controller.yaml
install/dofbot_moveit/share/dofbot_moveit/launch/: dofbot.launch.py
install/dofbot_moveit/share/dofbot_moveit/urdf/: dofbot.urdf.xacro
log/: latest_build
